retrieveNA31/objects/Core_IPS_Case_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Core_IPS_BgColor__c</fullName>
        <label>Background Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Case_Comment_ID__c</fullName>
        <label>Case Comment ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case RTFS</relationshipLabel>
        <relationshipName>Case_RTFS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Comment__c</fullName>
        <label>Plain Comment</label>
        <length>92768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_IPS_IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Migrated_Note_Type__c</fullName>
        <description>This field will be used for migration processing to identify type of note migrated to allow Bulk Export/ Delete</description>
        <label>Migrated Note Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner_Category_Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env_Detail_Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env_Detail_Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm_Log_Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm_Log_Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_IPS_NickName__c</fullName>
        <label>NickName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Notetype__c</fullName>
        <label>Notetype</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Visible to External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Rich_Comment__c</fullName>
        <label>Rich Comment</label>
        <length>92768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Core_Promote_Status__c</fullName>
        <label>Promote Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_for_Rich__c</fullName>
        <label>Test for Rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_fro_plain__c</fullName>
        <description>this is for testing, do not migrate this</description>
        <label>Test for plain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case RTF</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RTF-{000000000}</displayFormat>
        <label>Case RTF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case RTFS</pluralLabel>
    <recordTypes>
        <fullName>Case_comment</fullName>
        <active>true</active>
        <label>Case comment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>